Fixing thumbnail opening on mobile
pointer-events: none;

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1914,11 +1914,13 @@
 		border: 0;
 		display: inline-block;
 		position: relative;
+		pointer-events: none;
 	}
 
 		.image img {
 			border-radius: 4px;
 			display: block;
+			
 		}
 
 		.image.left, .image.right {
@@ -2081,6 +2083,8 @@
 					}
 
 			@media screen and (max-width: 480px) {
+
+				pointer-events: none;
 
 				ul.actions {
 					margin: 0 0 2em 0;
@@ -2441,6 +2445,8 @@
 
 		@media screen and (max-width: 1280px) {
 
+			pointer-events: none;
+
 			.thumbnails {
 				margin: 0 0 2em -1.5em;
 			}
@@ -2457,6 +2463,8 @@
 
 		@media screen and (max-width: 980px) {
 
+			pointer-events: none;
+			
 			.thumbnails h3 {
 				font-size: 0.8em;
 			}
